# gaussiancar

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
configs/: eval.yaml  inference.yaml  train.yaml
configs/data/: nuscenes.yaml
configs/data/img_params/: scale_0_3.yaml  scale_0_5.yaml
configs/module/: gaussiancar.yaml
configs/task/: map.yaml  vehicle.yaml
gaussiancar/: losses.py  metrics.py  render.py
gaussiancar/data/: common.py  data_module.py  dataset_refactor.py  nuscenes_dataset.py  nuscenes_dataset_generated.py  sample.py
gaussiancar/data/transforms/: augmentations.py
gaussiancar/data/transforms/nuscenes/: labels.py  loading.py
gaussiancar/modeling/: model.py  module.py
gaussiancar/modeling/components/: __init__.py  cmx.py  conv.py  dpt.py  fuser.py  head.py  image_encoder.py  radar_encoder.py
gaussiancar/ops/diff-gaussian-rasterization/: .gitignore  pyproject.toml  rasterize_points.cu  rasterize_points.h  setup.py
gaussiancar/ops/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
gaussiancar/ops/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
gaussiancar/ops/diff-gaussian-rasterization/scripts/: test.ipynb
gaussiancar/ops/ptv3/: model.py
gaussiancar/utils/: config.py  consts.py  nuscenes_map_api.py  pca.py
tools/: create_data.py  eval.py  inference.py  train.py
